[package]
name = "pdf_year_planner"
version = "0.1.0"
authors = ["Craig Mayhew"]
description = "The rust source code that generates PDF year planners"
readme = "README.md"
license = "GPL3"
repository = "https://github.com/craigmayhew/pdf-year-planner.net"
edition = "2018"

[features]

[dependencies]
chrono = "0.4"
wkhtmltopdf = "0.3"
