[package]
name = "pdf_year_planner"
version = "0.1.0"
authors = ["Craig Mayhew"]
description = "Rust source code that creates PDF year planners using WKHTMLTOPDF"
readme = "README.md"
license = "GPL3"
repository = "https://github.com/craigmayhew/pdf-year-planner"
edition = "2018"

[features]

[dependencies]
chrono = "0.4"
wkhtmltopdf = "0.4"
